--- a/Chrome_Ext/popup.css
+++ b/Chrome_Ext/popup.css
@@ -8,6 +8,10 @@ body {
   color: rgb(28, 28, 33);
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body.dark {
   background: #24252A;
   color: #fff;
@@ -26,9 +30,12 @@ body.dark {
   left: -7%;
   width: 1.2em;
   height: 1.2em;
+  transition: transform .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transform: scale(1);
 }
 .setting:hover, .back-btn:hover {
   cursor: pointer;
+  transform: scale(1.1);
 }
 .dark .setting,.dark .back-btn {
   fill: #fff;
@@ -84,6 +91,7 @@ body.dark {
 }
 
 .btn_primary {
+  position: relative;
   background-color: hsl(220, 90%, 56%);
   color: #fff;
   line-height: 1.2;
@@ -97,6 +105,18 @@ body.dark {
   border-radius: 0.25em;
   width: 100%;
   margin-bottom: 1em;
+}
+.btn_primary:disabled::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color:rgba(192,192,192,0.3);
+  width: 100%;
+  height: 100%;
+}
+.btn_primary:disabled:hover {
+  cursor: default;
 }
 
 .dark .btn_primary {
@@ -123,17 +143,18 @@ body.dark {
   padding: 0.5em;
   border: 0;
   width: 100%;
-  display: none;
+  opacity: 0;
+  transition: opacity .3s ease-out;
 }
 
 .success_msg {
   background: hsla(94, 48%, 56%, 0.2);
-  display: block;
+  opacity: 1;
 }
 
 .error_msg {
   background: hsla(0, 95%, 46%, 0.2);
-  display: block;
+  opacity: 1;
 }
 
 .owner {
@@ -269,4 +290,35 @@ body.dark {
 
 .conn_status {
   margin-bottom: 1.5em;
+}
+
+.loader {
+  position: absolute;
+  top: 20%;
+  left: 90%;
+  transform: translate(-50%, -50%);
+  border: 7px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 7px solid #3498db;
+  width: 15px;
+  height: 15px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  z-index: 999;
+}
+
+.dark .loader {
+  border-color: #3b3c40;
+  border-top-color: #5C5EDC;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
