--- a/Chrome_Ext/popup.css
+++ b/Chrome_Ext/popup.css
@@ -8,8 +8,16 @@ body {
   color: rgb(28, 28, 33);
 }
 
-* {
+ol, ul {
+	list-style: none;
+}
+
+*, ::after, ::before {
   box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
 }
 
 body.dark {
